--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,19 @@ google-auth-oauthlib
 pyjwt
 supabase
 python-multipart
-
+passlib
+sqlalchemy
+bcrypt
+secure-smtplib
+email-validator
+pytest
+aiosmtplib
+jinja2
+pytest-asyncio
+google
+pydantic
+sendgrid
+cryptography
+requests
+itsdangerous
+pandas
